--- a/archives/toutiao-search/2023-11-07.md
+++ b/archives/toutiao-search/2023-11-07.md
@@ -1,62 +1,78 @@
 # 2023-11-07
 
-共 367 条
+共 381 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 07 2023 22:00:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 07 2023 23:00:36 GMT+0800 (China Standard Time) -->
 1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
-1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
-1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
-1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
 1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+1. [iQOO 12正式发布 起售仅3999](https://so.toutiao.com/search?keyword=iQOO+12正式发布 起售仅3999)
+1. [余承东、何小鹏撕到现在究竟为什么](https://so.toutiao.com/search?keyword=余承东、何小鹏撕到现在究竟为什么)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
-1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
-1. [兰州某校有学生失踪？假的](https://so.toutiao.com/search?keyword=兰州某校有学生失踪？假的)
 1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
-1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
 1. [男子每天三顿腌制品确诊胃癌晚期](https://so.toutiao.com/search?keyword=男子每天三顿腌制品确诊胃癌晚期)
-1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
+1. [兰州某校有学生失踪？假的](https://so.toutiao.com/search?keyword=兰州某校有学生失踪？假的)
+1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
+1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
+1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
 1. [女医生坠楼高位截瘫蹊跷溺亡](https://so.toutiao.com/search?keyword=女医生坠楼高位截瘫蹊跷溺亡)
-1. [广西6岁女孩沙滩走失后死亡](https://so.toutiao.com/search?keyword=广西6岁女孩沙滩走失后死亡)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
-1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
 1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
+1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
 1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
-1. [一加12手机：搭载6400万潜望式长焦](https://so.toutiao.com/search?keyword=一加12手机：搭载6400万潜望式长焦)
+1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
+1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
 1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
 1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
-1. [卖出生证女院长疑有非法引产前科](https://so.toutiao.com/search?keyword=卖出生证女院长疑有非法引产前科)
-1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
-1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
-1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
-1. [以方任命特使进行加沙人质解救任务](https://so.toutiao.com/search?keyword=以方任命特使进行加沙人质解救任务)
+1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
 1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
+1. [哈马斯称摧毁82辆以军军车](https://so.toutiao.com/search?keyword=哈马斯称摧毁82辆以军军车)
+1. [超过160名医护人员在加沙因公殉职](https://so.toutiao.com/search?keyword=超过160名医护人员在加沙因公殉职)
+1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
+1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
+1. [多家车企降价 车市打响年终价格战](https://so.toutiao.com/search?keyword=多家车企降价+车市打响年终价格战)
+1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
+1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
+1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
+1. [购房者贷款买房被银行办了消费贷](https://so.toutiao.com/search?keyword=购房者贷款买房被银行办了消费贷)
+1. [网约车司机疲劳驾驶致乘客受伤](https://so.toutiao.com/search?keyword=网约车司机疲劳驾驶致乘客受伤)
+1. [小鹏再反击：吵不过就直接上成绩单](https://so.toutiao.com/search?keyword=小鹏再反击：吵不过就直接上成绩单)
+1. [女医生遗书称被丈夫长期注射麻醉剂](https://so.toutiao.com/search?keyword=女医生遗书称被丈夫长期注射麻醉剂)
+1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
+1. [日本为何谋求与菲律宾加强军事联系](https://so.toutiao.com/search?keyword=日本为何谋求与菲律宾加强军事联系)
+1. [人民网：确保人民安全温暖度过寒潮](https://so.toutiao.com/search?keyword=人民网：确保人民安全温暖度过寒潮)
+1. [福原爱回应或被判刑：已与律师沟通](https://so.toutiao.com/search?keyword=福原爱回应或被判刑：已与律师沟通)
+1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
+1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
+1. [泰山赛后谢场 球迷激情高喊](https://so.toutiao.com/search?keyword=泰山赛后谢场+球迷激情高喊)
+1. [广西6岁女孩沙滩走失后死亡](https://so.toutiao.com/search?keyword=广西6岁女孩沙滩走失后死亡)
+1. [律师手机被扣突发疾病云南高院回应](https://so.toutiao.com/search?keyword=律师手机被扣突发疾病云南高院回应)
+1. [出生证明事件暗访者：证据已交警方](https://so.toutiao.com/search?keyword=出生证明事件暗访者：证据已交警方)
+1. [丁仲礼将出席巴黎和平论坛](https://so.toutiao.com/search?keyword=丁仲礼将出席巴黎和平论坛)
+1. [一加12手机：搭载6400万潜望式长焦](https://so.toutiao.com/search?keyword=一加12手机：搭载6400万潜望式长焦)
+1. [卖出生证女院长疑有非法引产前科](https://so.toutiao.com/search?keyword=卖出生证女院长疑有非法引产前科)
+1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
+1. [以方任命特使进行加沙人质解救任务](https://so.toutiao.com/search?keyword=以方任命特使进行加沙人质解救任务)
 1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
 1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
-1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
 1. [乌官员“疯狂偷窃”？乌外长否认](https://so.toutiao.com/search?keyword=乌官员“疯狂偷窃”？乌外长否认)
 1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
-1. [多家车企降价 车市打响年终价格战](https://so.toutiao.com/search?keyword=多家车企降价+车市打响年终价格战)
 1. [女生肚子大被搓澡阿姨救了一命](https://so.toutiao.com/search?keyword=女生肚子大被搓澡阿姨救了一命)
-1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
-1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
 1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
 1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
-1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
-1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
 1. [央行副行长：对房地产发展有信心](https://so.toutiao.com/search?keyword=央行副行长：对房地产发展有信心)
-1. [小鹏再反击：吵不过就直接上成绩单](https://so.toutiao.com/search?keyword=小鹏再反击：吵不过就直接上成绩单)
-1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
 1. [福建男子在宾馆疑将妻子打死](https://so.toutiao.com/search?keyword=福建男子在宾馆疑将妻子打死)
 1. [王自如首次露面回应加入格力绯闻](https://so.toutiao.com/search?keyword=王自如首次露面回应加入格力绯闻)
 1. [二级公立医院将实现结果跨机构调阅](https://so.toutiao.com/search?keyword=二级公立医院将实现结果跨机构调阅)
-1. [女医生遗书称被丈夫长期注射麻醉剂](https://so.toutiao.com/search?keyword=女医生遗书称被丈夫长期注射麻醉剂)
 1. [司机车停小区口看到来车慢悠悠聊天](https://so.toutiao.com/search?keyword=司机车停小区口看到来车慢悠悠聊天)
 1. [深圳供电局只录取海归硕士？假的](https://so.toutiao.com/search?keyword=深圳供电局只录取海归硕士？假的)
 1. [媒体：让课间十分钟热闹起来](https://so.toutiao.com/search?keyword=媒体：让课间十分钟热闹起来)
-1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
 1. [人民网评院长被指倒卖出生证明](https://so.toutiao.com/search?keyword=人民网评院长被指倒卖出生证明)
 1. [检察院抗诉犯人遭殴打后身亡案](https://so.toutiao.com/search?keyword=检察院抗诉犯人遭殴打后身亡案)
 1. [媒体评医院院长贩卖婴儿和出生证明](https://so.toutiao.com/search?keyword=媒体评医院院长贩卖婴儿和出生证明)
@@ -67,12 +83,10 @@
 1. [2023 OPPO开发者大会前瞻](https://so.toutiao.com/search?keyword=2023+OPPO开发者大会前瞻)
 1. [哈尔滨冻成了“哈八滨”](https://so.toutiao.com/search?keyword=哈尔滨冻成了“哈八滨”)
 1. [理想MEGA配置曝光](https://so.toutiao.com/search?keyword=理想MEGA配置曝光)
-1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
 1. [崔康熙：上次赢了朋友球队不好意思](https://so.toutiao.com/search?keyword=崔康熙：上次赢了朋友球队不好意思)
 1. [乌高官：西方援乌武器没有流向加沙](https://so.toutiao.com/search?keyword=乌高官：西方援乌武器没有流向加沙)
 1. [“蓝委”：会尽最大努力促成蓝白合](https://so.toutiao.com/search?keyword=“蓝委”：会尽最大努力促成蓝白合)
 1. [《无价之宝》大小张译同框](https://so.toutiao.com/search?keyword=《无价之宝》大小张译同框)
-1. [出生证明事件暗访者：证据已交警方](https://so.toutiao.com/search?keyword=出生证明事件暗访者：证据已交警方)
 1. [追梦：库里是史上最佳控卫没有之一](https://so.toutiao.com/search?keyword=追梦：库里是史上最佳控卫没有之一)
 1. [澳洲联储时隔4次会议后鸽派加息](https://so.toutiao.com/search?keyword=澳洲联储时隔4次会议后鸽派加息)
 1. [“乌镇峰会” 十年回首再出发](https://so.toutiao.com/search?keyword=“乌镇峰会”+十年回首再出发)
