--- a/archives/zhihu-search/2023-11-07.md
+++ b/archives/zhihu-search/2023-11-07.md
@@ -1,14 +1,23 @@
 # 2023-11-07
 
-共 36 条
+共 37 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Tue Nov 07 2023 22:00:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 07 2023 23:00:36 GMT+0800 (China Standard Time) -->
+1. [双十一手机推荐](https://www.zhihu.com/search?q=双十一手机推荐)
+1. [华为mate60](https://www.zhihu.com/search?q=华为mate60)
+1. [iphone15](https://www.zhihu.com/search?q=iphone15)
+1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
+1. [华为mate60pro](https://www.zhihu.com/search?q=华为mate60pro)
+1. [智能手表推荐](https://www.zhihu.com/search?q=智能手表推荐)
+1. [蓝牙耳机](https://www.zhihu.com/search?q=蓝牙耳机)
+1. [显示器](https://www.zhihu.com/search?q=显示器)
+1. [游戏显示器推荐](https://www.zhihu.com/search?q=游戏显示器推荐)
+1. [流量卡](https://www.zhihu.com/search?q=流量卡)
 1. [怎么剪辑视频](https://www.zhihu.com/search?q=怎么剪辑视频)
 1. [董明珠首次回应孟羽童离职](https://www.zhihu.com/search?q=董明珠首次回应孟羽童离职)
 1. [特斯拉又要涨价](https://www.zhihu.com/search?q=特斯拉又要涨价)
 1. [官方通报医院公开贩卖婴儿出生证](https://www.zhihu.com/search?q=官方通报医院公开贩卖婴儿出生证)
-1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
 1. [果郡王口碑一夜逆转](https://www.zhihu.com/search?q=果郡王口碑一夜逆转)
 1. [许凯麦粒肿了](https://www.zhihu.com/search?q=许凯麦粒肿了)
 1. [你玩过节奏大师吗](https://www.zhihu.com/search?q=你玩过节奏大师吗)
@@ -30,14 +39,6 @@
 1. [哈工大学生去上课像登机](https://www.zhihu.com/search?q=哈工大学生去上课像登机)
 1. [当我爸看到我成绩的那一刻](https://www.zhihu.com/search?q=当我爸看到我成绩的那一刻)
 1. [哈工大暖廊里还在穿短袖](https://www.zhihu.com/search?q=哈工大暖廊里还在穿短袖)
-1. [双十一手机推荐](https://www.zhihu.com/search?q=双十一手机推荐)
-1. [华为mate60](https://www.zhihu.com/search?q=华为mate60)
-1. [iphone15](https://www.zhihu.com/search?q=iphone15)
-1. [华为mate60pro](https://www.zhihu.com/search?q=华为mate60pro)
-1. [智能手表推荐](https://www.zhihu.com/search?q=智能手表推荐)
-1. [蓝牙耳机](https://www.zhihu.com/search?q=蓝牙耳机)
-1. [显示器](https://www.zhihu.com/search?q=显示器)
-1. [游戏显示器推荐](https://www.zhihu.com/search?q=游戏显示器推荐)
 1. [A股](https://www.zhihu.com/search?q=A股)
 1. [三大指数集体低开](https://www.zhihu.com/search?q=三大指数集体低开)
 <!-- END ZHIHUSEARCH -->
