--- a/archives/toutiao-search/2023-11-08.md
+++ b/archives/toutiao-search/2023-11-08.md
@@ -1,59 +1,65 @@
 # 2023-11-08
 
-共 74 条
+共 78 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 08 2023 05:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Nov 08 2023 06:01:08 GMT+0800 (China Standard Time) -->
 1. [女医生坠楼高位截瘫蹊跷溺亡](https://so.toutiao.com/search?keyword=女医生坠楼高位截瘫蹊跷溺亡)
 1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
 1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+1. [女医生遗书称被丈夫长期注射麻醉剂](https://so.toutiao.com/search?keyword=女医生遗书称被丈夫长期注射麻醉剂)
 1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
-1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
 1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
 1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
 1. [兰州某校有学生失踪？假的](https://so.toutiao.com/search?keyword=兰州某校有学生失踪？假的)
-1. [女医生遗书称被丈夫长期注射麻醉剂](https://so.toutiao.com/search?keyword=女医生遗书称被丈夫长期注射麻醉剂)
+1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
+1. [撒贝宁一家四口游迪士尼](https://so.toutiao.com/search?keyword=撒贝宁一家四口游迪士尼)
 1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
 1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
 1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
 1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
-1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
 1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
-1. [购房者贷款买房被银行办了消费贷](https://so.toutiao.com/search?keyword=购房者贷款买房被银行办了消费贷)
-1. [iQOO 12正式发布 起售仅3999](https://so.toutiao.com/search?keyword=iQOO+12正式发布 起售仅3999)
+1. [日本排放核污水环保少女怎么沉默了](https://so.toutiao.com/search?keyword=日本排放核污水环保少女怎么沉默了)
+1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
 1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
 1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
 1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
 1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
 1. [哈马斯称摧毁82辆以军军车](https://so.toutiao.com/search?keyword=哈马斯称摧毁82辆以军军车)
-1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
+1. [iQOO 12正式发布 起售仅3999](https://so.toutiao.com/search?keyword=iQOO+12正式发布 起售仅3999)
 1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
 1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
 1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
 1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
-1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
 1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
+1. [肺炎支原体感染过一次还会再感染吗](https://so.toutiao.com/search?keyword=肺炎支原体感染过一次还会再感染吗)
+1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
+1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
+1. [韩办否认韩国瑜见柯文哲表态侯韩配](https://so.toutiao.com/search?keyword=韩办否认韩国瑜见柯文哲表态侯韩配)
+1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
+1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
+1. [市场监管总局：10批食品抽检不合格](https://so.toutiao.com/search?keyword=市场监管总局：10批食品抽检不合格)
+1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
+1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
+1. [英2名环保人士闯入美术馆破坏名画](https://so.toutiao.com/search?keyword=英2名环保人士闯入美术馆破坏名画)
+1. [足协杯：马莱莱闪击 申花1-0胜海牛](https://so.toutiao.com/search?keyword=足协杯：马莱莱闪击+申花1-0胜海牛)
+1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
+1. [高福谈支原体肺炎高发](https://so.toutiao.com/search?keyword=高福谈支原体肺炎高发)
+1. [山东与申花会师足协杯决赛](https://so.toutiao.com/search?keyword=山东与申花会师足协杯决赛)
+1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
 1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
+1. [国道江苏宿淮站获批收费意味着什么](https://so.toutiao.com/search?keyword=国道江苏宿淮站获批收费意味着什么)
+1. [房地产头部企业遭遇信任危机](https://so.toutiao.com/search?keyword=房地产头部企业遭遇信任危机)
+1. [购房者贷款买房被银行办了消费贷](https://so.toutiao.com/search?keyword=购房者贷款买房被银行办了消费贷)
 1. [韩国多地兴起“光脚走路”热潮](https://so.toutiao.com/search?keyword=韩国多地兴起“光脚走路”热潮)
 1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
-1. [韩办否认韩国瑜见柯文哲表态侯韩配](https://so.toutiao.com/search?keyword=韩办否认韩国瑜见柯文哲表态侯韩配)
-1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
-1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
-1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
-1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
-1. [足协杯：马莱莱闪击 申花1-0胜海牛](https://so.toutiao.com/search?keyword=足协杯：马莱莱闪击+申花1-0胜海牛)
-1. [英2名环保人士闯入美术馆破坏名画](https://so.toutiao.com/search?keyword=英2名环保人士闯入美术馆破坏名画)
-1. [市场监管总局：10批食品抽检不合格](https://so.toutiao.com/search?keyword=市场监管总局：10批食品抽检不合格)
-1. [山东与申花会师足协杯决赛](https://so.toutiao.com/search?keyword=山东与申花会师足协杯决赛)
-1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
-1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
 1. [犹太人团体在自由女神像前呼吁停火](https://so.toutiao.com/search?keyword=犹太人团体在自由女神像前呼吁停火)
 1. [皮卡车高速起火被烧成空壳](https://so.toutiao.com/search?keyword=皮卡车高速起火被烧成空壳)
 1. [多家车企降价 车市打响年终价格战](https://so.toutiao.com/search?keyword=多家车企降价+车市打响年终价格战)
-1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
 1. [小鹏再反击：吵不过就直接上成绩单](https://so.toutiao.com/search?keyword=小鹏再反击：吵不过就直接上成绩单)
 1. [美国将暂停参与一项裁军条约](https://so.toutiao.com/search?keyword=美国将暂停参与一项裁军条约)
 1. [体育馆坍塌事故的法律责任分析](https://so.toutiao.com/search?keyword=体育馆坍塌事故的法律责任分析)
@@ -67,9 +73,7 @@
 1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
 1. [余承东、何小鹏撕到现在究竟为什么](https://so.toutiao.com/search?keyword=余承东、何小鹏撕到现在究竟为什么)
 1. [北方车主一觉醒来隐形门把手冻上了](https://so.toutiao.com/search?keyword=北方车主一觉醒来隐形门把手冻上了)
-1. [肺炎支原体感染过一次还会再感染吗](https://so.toutiao.com/search?keyword=肺炎支原体感染过一次还会再感染吗)
 1. [李宁透露将处罚Scout和Tarzan](https://so.toutiao.com/search?keyword=李宁透露将处罚Scout和Tarzan)
-1. [高福谈支原体肺炎高发](https://so.toutiao.com/search?keyword=高福谈支原体肺炎高发)
 1. [出生证明事件暗访者：证据已交警方](https://so.toutiao.com/search?keyword=出生证明事件暗访者：证据已交警方)
 1. [哈尔滨冻成了“哈八滨”](https://so.toutiao.com/search?keyword=哈尔滨冻成了“哈八滨”)
 1. [专业AEB测试是如何进行的](https://so.toutiao.com/search?keyword=专业AEB测试是如何进行的)
