--- a/archives/toutiao-search/2023-11-08.md
+++ b/archives/toutiao-search/2023-11-08.md
@@ -1,77 +1,91 @@
 # 2023-11-08
 
-共 98 条
+共 109 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 08 2023 08:24:35 GMT+0800 (China Standard Time) -->
-1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
-1. [志愿者讲述卧底襄阳健桥医院经历](https://so.toutiao.com/search?keyword=志愿者讲述卧底襄阳健桥医院经历)
-1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+<!-- 最后更新时间 Wed Nov 08 2023 09:41:43 GMT+0800 (China Standard Time) -->
+1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
 1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
 1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
 1. [今日立冬](https://so.toutiao.com/search?keyword=今日立冬)
-1. [兰州某校有学生失踪？假的](https://so.toutiao.com/search?keyword=兰州某校有学生失踪？假的)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
+1. [广东电网辟谣居民电价涨了](https://so.toutiao.com/search?keyword=广东电网辟谣居民电价涨了)
 1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
-1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
 1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
 1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
-1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
 1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
-1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
-1. [AC米兰2-1逆转大巴黎](https://so.toutiao.com/search?keyword=AC米兰2-1逆转大巴黎)
+1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
+1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
+1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
 1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
-1. [iQOO 12正式发布 起售仅3999](https://so.toutiao.com/search?keyword=iQOO+12正式发布 起售仅3999)
 1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
-1. [卖出生证女院长疑有非法引产前科](https://so.toutiao.com/search?keyword=卖出生证女院长疑有非法引产前科)
+1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
+1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
 1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
-1. [巴以冲突开战一个月开打“地道战”](https://so.toutiao.com/search?keyword=巴以冲突开战一个月开打“地道战”)
 1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
 1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
-1. [哈马斯称摧毁82辆以军军车](https://so.toutiao.com/search?keyword=哈马斯称摧毁82辆以军军车)
+1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
+1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
+1. [15万内热门SUV哪些有AEB](https://so.toutiao.com/search?keyword=15万内热门SUV哪些有AEB)
+1. [OpenAI对创业公司有何影响](https://so.toutiao.com/search?keyword=OpenAI对创业公司有何影响)
+1. [百度向华为订购1600片AI芯片](https://so.toutiao.com/search?keyword=百度向华为订购1600片AI芯片)
 1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
+1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
+1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
+1. [退役军人祖孙三代合影](https://so.toutiao.com/search?keyword=退役军人祖孙三代合影)
+1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
+1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
+1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
+1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
+1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
+1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
+1. [日本排放核污水环保少女怎么沉默了](https://so.toutiao.com/search?keyword=日本排放核污水环保少女怎么沉默了)
+1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
+1. [面对以打击哈马斯是否还有突破行动](https://so.toutiao.com/search?keyword=面对以打击哈马斯是否还有突破行动)
+1. [餐馆为因雪滞留司机免费送热饺子](https://so.toutiao.com/search?keyword=餐馆为因雪滞留司机免费送热饺子)
+1. [余承东、何小鹏撕到现在究竟为什么](https://so.toutiao.com/search?keyword=余承东、何小鹏撕到现在究竟为什么)
+1. [米兰VS巴黎球员评分：莱奥8.0分](https://so.toutiao.com/search?keyword=米兰VS巴黎球员评分：莱奥8.0分)
+1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
+1. [市场监管总局：10批食品抽检不合格](https://so.toutiao.com/search?keyword=市场监管总局：10批食品抽检不合格)
+1. [李宁透露将处罚Scout和Tarzan](https://so.toutiao.com/search?keyword=李宁透露将处罚Scout和Tarzan)
+1. [志愿者讲述卧底襄阳健桥医院经历](https://so.toutiao.com/search?keyword=志愿者讲述卧底襄阳健桥医院经历)
+1. [兰州某校有学生失踪？假的](https://so.toutiao.com/search?keyword=兰州某校有学生失踪？假的)
+1. [AC米兰2-1逆转大巴黎](https://so.toutiao.com/search?keyword=AC米兰2-1逆转大巴黎)
+1. [iQOO 12正式发布 起售仅3999](https://so.toutiao.com/search?keyword=iQOO+12正式发布 起售仅3999)
+1. [卖出生证女院长疑有非法引产前科](https://so.toutiao.com/search?keyword=卖出生证女院长疑有非法引产前科)
+1. [巴以冲突开战一个月开打“地道战”](https://so.toutiao.com/search?keyword=巴以冲突开战一个月开打“地道战”)
+1. [哈马斯称摧毁82辆以军军车](https://so.toutiao.com/search?keyword=哈马斯称摧毁82辆以军军车)
 1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
 1. [古特雷斯说加沙正成为“儿童坟场”](https://so.toutiao.com/search?keyword=古特雷斯说加沙正成为“儿童坟场”)
 1. [韩国寿宴一路摆满花圈](https://so.toutiao.com/search?keyword=韩国寿宴一路摆满花圈)
-1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
-1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [专业AEB测试是如何进行的](https://so.toutiao.com/search?keyword=专业AEB测试是如何进行的)
 1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
 1. [董宇辉被新东方选为首批出国游主播](https://so.toutiao.com/search?keyword=董宇辉被新东方选为首批出国游主播)
 1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
-1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
 1. [北方车主一觉醒来隐形门把手冻上了](https://so.toutiao.com/search?keyword=北方车主一觉醒来隐形门把手冻上了)
-1. [15万内热门SUV哪些有AEB](https://so.toutiao.com/search?keyword=15万内热门SUV哪些有AEB)
-1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
 1. [曝律师手机被扣后突发心脏病入院](https://so.toutiao.com/search?keyword=曝律师手机被扣后突发心脏病入院)
-1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
-1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
 1. [神十六航天员回地球看见的第一个人](https://so.toutiao.com/search?keyword=神十六航天员回地球看见的第一个人)
 1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
 1. [哈马斯的领导人们都去哪里了](https://so.toutiao.com/search?keyword=哈马斯的领导人们都去哪里了)
-1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
-1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
 1. [月光族在间谍指导下考上公务员](https://so.toutiao.com/search?keyword=月光族在间谍指导下考上公务员)
 1. [女医生坠楼高位截瘫蹊跷溺亡](https://so.toutiao.com/search?keyword=女医生坠楼高位截瘫蹊跷溺亡)
 1. [女医生遗书称被丈夫长期注射麻醉剂](https://so.toutiao.com/search?keyword=女医生遗书称被丈夫长期注射麻醉剂)
 1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
-1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
-1. [市场监管总局：10批食品抽检不合格](https://so.toutiao.com/search?keyword=市场监管总局：10批食品抽检不合格)
 1. [伊朗最高领袖呼吁结束在加沙的罪行](https://so.toutiao.com/search?keyword=伊朗最高领袖呼吁结束在加沙的罪行)
-1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
 1. [雷军证实小米14销量已超百万台](https://so.toutiao.com/search?keyword=雷军证实小米14销量已超百万台)
 1. [撒贝宁一家四口游迪士尼](https://so.toutiao.com/search?keyword=撒贝宁一家四口游迪士尼)
 1. [周鸿祎自称乌镇峰会气氛组担当](https://so.toutiao.com/search?keyword=周鸿祎自称乌镇峰会气氛组担当)
 1. [韩国多地兴起“光脚走路”热潮](https://so.toutiao.com/search?keyword=韩国多地兴起“光脚走路”热潮)
 1. [部分议员呼吁美履行对菲老兵的承诺](https://so.toutiao.com/search?keyword=部分议员呼吁美履行对菲老兵的承诺)
-1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
 1. [欧足联预测米兰vs巴黎首发](https://so.toutiao.com/search?keyword=欧足联预测米兰vs巴黎首发)
 1. [看《重案六组》学拐卖婴儿如何量刑](https://so.toutiao.com/search?keyword=看《重案六组》学拐卖婴儿如何量刑)
 1. [杨威晒照庆祝结婚15周年](https://so.toutiao.com/search?keyword=杨威晒照庆祝结婚15周年)
-1. [余承东、何小鹏撕到现在究竟为什么](https://so.toutiao.com/search?keyword=余承东、何小鹏撕到现在究竟为什么)
-1. [日本排放核污水环保少女怎么沉默了](https://so.toutiao.com/search?keyword=日本排放核污水环保少女怎么沉默了)
 1. [肺炎支原体感染过一次还会再感染吗](https://so.toutiao.com/search?keyword=肺炎支原体感染过一次还会再感染吗)
 1. [韩办否认韩国瑜见柯文哲表态侯韩配](https://so.toutiao.com/search?keyword=韩办否认韩国瑜见柯文哲表态侯韩配)
 1. [英2名环保人士闯入美术馆破坏名画](https://so.toutiao.com/search?keyword=英2名环保人士闯入美术馆破坏名画)
@@ -79,11 +93,9 @@
 1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
 1. [高福谈支原体肺炎高发](https://so.toutiao.com/search?keyword=高福谈支原体肺炎高发)
 1. [山东与申花会师足协杯决赛](https://so.toutiao.com/search?keyword=山东与申花会师足协杯决赛)
-1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
 1. [国道江苏宿淮站获批收费意味着什么](https://so.toutiao.com/search?keyword=国道江苏宿淮站获批收费意味着什么)
 1. [房地产头部企业遭遇信任危机](https://so.toutiao.com/search?keyword=房地产头部企业遭遇信任危机)
 1. [购房者贷款买房被银行办了消费贷](https://so.toutiao.com/search?keyword=购房者贷款买房被银行办了消费贷)
-1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
 1. [犹太人团体在自由女神像前呼吁停火](https://so.toutiao.com/search?keyword=犹太人团体在自由女神像前呼吁停火)
 1. [皮卡车高速起火被烧成空壳](https://so.toutiao.com/search?keyword=皮卡车高速起火被烧成空壳)
 1. [多家车企降价 车市打响年终价格战](https://so.toutiao.com/search?keyword=多家车企降价+车市打响年终价格战)
@@ -94,7 +106,6 @@
 1. [暴雪回应魔兽世界能否登陆Xbox](https://so.toutiao.com/search?keyword=暴雪回应魔兽世界能否登陆Xbox)
 1. [长期不吃主食有哪些危害](https://so.toutiao.com/search?keyword=长期不吃主食有哪些危害)
 1. [蓝营该如何应对柯文哲爆粗口式谩骂](https://so.toutiao.com/search?keyword=蓝营该如何应对柯文哲爆粗口式谩骂)
-1. [李宁透露将处罚Scout和Tarzan](https://so.toutiao.com/search?keyword=李宁透露将处罚Scout和Tarzan)
 1. [出生证明事件暗访者：证据已交警方](https://so.toutiao.com/search?keyword=出生证明事件暗访者：证据已交警方)
 1. [哈尔滨冻成了“哈八滨”](https://so.toutiao.com/search?keyword=哈尔滨冻成了“哈八滨”)
 1. [智界S7有望实现快充续航双800加持](https://so.toutiao.com/search?keyword=智界S7有望实现快充续航双800加持)
