--- a/archives/toutiao-search/2023-11-08.md
+++ b/archives/toutiao-search/2023-11-08.md
@@ -1,57 +1,68 @@
 # 2023-11-08
 
-共 109 条
+共 119 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 08 2023 09:41:43 GMT+0800 (China Standard Time) -->
-1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
-1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
-1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+<!-- 最后更新时间 Wed Nov 08 2023 10:15:32 GMT+0800 (China Standard Time) -->
+1. [厦门街头散落大量百元钞票](https://so.toutiao.com/search?keyword=厦门街头散落大量百元钞票)
 1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
+1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
 1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
-1. [今日立冬](https://so.toutiao.com/search?keyword=今日立冬)
-1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
 1. [广东电网辟谣居民电价涨了](https://so.toutiao.com/search?keyword=广东电网辟谣居民电价涨了)
 1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
-1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
-1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
-1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
+1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
 1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
-1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
 1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
+1. [佳木斯坍塌体育馆投入使用仅3年](https://so.toutiao.com/search?keyword=佳木斯坍塌体育馆投入使用仅3年)
 1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
-1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
+1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
+1. [百度向华为订购1600片AI芯片](https://so.toutiao.com/search?keyword=百度向华为订购1600片AI芯片)
+1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
 1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
 1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
 1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
 1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
 1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
-1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
-1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
+1. [媒体谈美向以提供小型精确制导武器](https://so.toutiao.com/search?keyword=媒体谈美向以提供小型精确制导武器)
+1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
+1. [联合国：加沙地带没有安全的地方](https://so.toutiao.com/search?keyword=联合国：加沙地带没有安全的地方)
+1. [退役军人祖孙三代合影](https://so.toutiao.com/search?keyword=退役军人祖孙三代合影)
+1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
+1. [以称对加沙超1.4万个目标进行打击](https://so.toutiao.com/search?keyword=以称对加沙超1.4万个目标进行打击)
+1. [泽连斯基任期届满后将继续履职](https://so.toutiao.com/search?keyword=泽连斯基任期届满后将继续履职)
 1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [15万内热门SUV哪些有AEB](https://so.toutiao.com/search?keyword=15万内热门SUV哪些有AEB)
-1. [OpenAI对创业公司有何影响](https://so.toutiao.com/search?keyword=OpenAI对创业公司有何影响)
-1. [百度向华为订购1600片AI芯片](https://so.toutiao.com/search?keyword=百度向华为订购1600片AI芯片)
-1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
-1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
-1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
-1. [退役军人祖孙三代合影](https://so.toutiao.com/search?keyword=退役军人祖孙三代合影)
-1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
-1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
-1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
-1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
-1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
 1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
-1. [日本排放核污水环保少女怎么沉默了](https://so.toutiao.com/search?keyword=日本排放核污水环保少女怎么沉默了)
-1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
-1. [面对以打击哈马斯是否还有突破行动](https://so.toutiao.com/search?keyword=面对以打击哈马斯是否还有突破行动)
+1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
+1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
+1. [长沙知名餐厅疑跑路 消费者员工喊话](https://so.toutiao.com/search?keyword=长沙知名餐厅疑跑路+消费者员工喊话)
 1. [餐馆为因雪滞留司机免费送热饺子](https://so.toutiao.com/search?keyword=餐馆为因雪滞留司机免费送热饺子)
+1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
+1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
+1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
+1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
+1. [欧冠：曼城3-0伯尔尼年轻人四连胜](https://so.toutiao.com/search?keyword=欧冠：曼城3-0伯尔尼年轻人四连胜)
 1. [余承东、何小鹏撕到现在究竟为什么](https://so.toutiao.com/search?keyword=余承东、何小鹏撕到现在究竟为什么)
-1. [米兰VS巴黎球员评分：莱奥8.0分](https://so.toutiao.com/search?keyword=米兰VS巴黎球员评分：莱奥8.0分)
+1. [广西百色学院通报：一学生中毒身亡](https://so.toutiao.com/search?keyword=广西百色学院通报：一学生中毒身亡)
 1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
+1. [曼城在欧冠已经连续17场不败](https://so.toutiao.com/search?keyword=曼城在欧冠已经连续17场不败)
+1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
+1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [今日立冬](https://so.toutiao.com/search?keyword=今日立冬)
+1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
+1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
+1. [OpenAI对创业公司有何影响](https://so.toutiao.com/search?keyword=OpenAI对创业公司有何影响)
+1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
+1. [日本排放核污水环保少女怎么沉默了](https://so.toutiao.com/search?keyword=日本排放核污水环保少女怎么沉默了)
+1. [面对以打击哈马斯是否还有突破行动](https://so.toutiao.com/search?keyword=面对以打击哈马斯是否还有突破行动)
+1. [米兰VS巴黎球员评分：莱奥8.0分](https://so.toutiao.com/search?keyword=米兰VS巴黎球员评分：莱奥8.0分)
 1. [市场监管总局：10批食品抽检不合格](https://so.toutiao.com/search?keyword=市场监管总局：10批食品抽检不合格)
 1. [李宁透露将处罚Scout和Tarzan](https://so.toutiao.com/search?keyword=李宁透露将处罚Scout和Tarzan)
 1. [志愿者讲述卧底襄阳健桥医院经历](https://so.toutiao.com/search?keyword=志愿者讲述卧底襄阳健桥医院经历)
@@ -90,7 +101,6 @@
 1. [韩办否认韩国瑜见柯文哲表态侯韩配](https://so.toutiao.com/search?keyword=韩办否认韩国瑜见柯文哲表态侯韩配)
 1. [英2名环保人士闯入美术馆破坏名画](https://so.toutiao.com/search?keyword=英2名环保人士闯入美术馆破坏名画)
 1. [足协杯：马莱莱闪击 申花1-0胜海牛](https://so.toutiao.com/search?keyword=足协杯：马莱莱闪击+申花1-0胜海牛)
-1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
 1. [高福谈支原体肺炎高发](https://so.toutiao.com/search?keyword=高福谈支原体肺炎高发)
 1. [山东与申花会师足协杯决赛](https://so.toutiao.com/search?keyword=山东与申花会师足协杯决赛)
 1. [国道江苏宿淮站获批收费意味着什么](https://so.toutiao.com/search?keyword=国道江苏宿淮站获批收费意味着什么)
